--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "tsc": "tsc --noEmit"
   },
   "dependencies": {
     "clsx": "^2.1.0",
@@ -39,6 +40,9 @@
     "vite": "^5.2.0"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx}": "npm run lint"
+    "src/**/*.{ts,tsx}": [
+      "npm run lint",
+      "bash -c 'npm run tsc'"
+    ]
   }
 }
